仓管后台页面接口

--- a/admin/src/main/resources/static/warehouse/purchase-edit.html
+++ b/admin/src/main/resources/static/warehouse/purchase-edit.html
@@ -1,73 +1,239 @@
-<meta title="编辑采购单" width="900px" args="storeData"/>
-<form role="form" id="storeUserForm" s="valid,form,nda,datac"
-      class="form-horizontal"
-      s-data="storeData"
-      method="put"
-      style="padding: 20px;" action="/api/back/warehouse/updatePurchase/{storeData.id}">
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">商品种类数量：</label>
-        <div class="col-sm-10">
-            <input autocomplete="off" type="text" name="procurementType" class="form-control" placeholder="商品种类数量">
+<meta title="编辑采购单" width="900px" args="storeData,goods:_model_,id" model="S.get('/api/back/warehouse/getEditPurchaseInfo/' + storeData.id)"/>
+<div class="p">
+    <form id="form" s="valid,nda" s-data="goods">
+        <div class="form-group" s-valid-role="item">
+            <label class="col-sm-2 control-label">实收总数量：</label>
+            <div class="col-sm-10">
+                <input autocomplete="off" type="text" s s-data-filter="goods.arrivalNum" name="goods.arrivalNum" class="form-control" placeholder="实收总数量">
+            </div>
         </div>
-    </div>
+        <div class="form-group" s-valid-role="item">
+            <label class="col-sm-2 control-label">实收总金额：</label>
+            <div class="col-sm-10">
+                <input autocomplete="off" type="text"    name="arrivalPrice" class="form-control" placeholder="实收总金额">
+            </div>
+        </div>
+        <div class="form-group" s-valid-role="item">
+            <label class="col-sm-2 control-label">物流单号：</label>
+            <div class="col-sm-10">
+                <input autocomplete="off" type="text" name="logisticsNo" class="form-control" placeholder="如yt:XXX,sf:XXX">
+            </div>
+        </div>
+        <div class="p-b clearfix">
+            <div class="pull-left">
+                <div s-valid-role="item" id="storeUser" s="tpl" s-data="{}" s-valid-label="门店"
+                     s-click="selectStoreUser()" style="display: inline-block">
+                    <a href="javascript:;" class="h3">{%=this.name || '选择门店'%} <i class="fa fa-plus"></i></a>
+                    <input type="hidden" name="storeUserId" value="{%=this.id%}" s-valid-error="require()"/>
+                    <input type="hidden" class="storeName" name="storeName" value="{%=this.name%}" s-valid-error="require()"/>
+                </div>
+            </div>
+            <div class="pull-right">
+                    <input type="button" class="btn btn-success btn-xs" s-click="selectFood()" value="选择商品"/>
+                <!--<input type="button" class="btn btn-primary btn-xs" s-click="selectStoreFood()" value="添加门店商品"/>-->
+            </div>
+        </div>
+        <div class="" id="foodQuoteSheetsGrid" s='check,datac,nda'
+             style="max-height: 500px; overflow: auto">
+            <table
+                    class="table table-striped table-bordered form-inline table-hover" s="datac,nda" s-data="goods.data">
+                <tr>
+                    <th>图片</th>
+                    <th>商品名</th>
+                    <th class="text-right">进价</th>
+                    <th class="text-right">进货数量</th>
+                    <th class="text-right">操作</th>
+                </tr>
+                <tbody s="loop" id="foodList" s-data="goods.data.data">
+                <tr s-loop-role="row" class="food-quote-row" s="datac"  >
+                    <th class="text-right" s s-data-filter="goods.data.data.foodName"></th>
+                    <th class="text-right" s s-data-filter="num"></th>
+                </tr>
+                </tbody>
+<!--                <tr s-loop-role="empty">-->
+<!--                    <td colspan="5" class="alert alert-warning">-->
+<!--                        暂无商品-->
+<!--                    </td>-->
+<!--                </tr>-->
+                <tr s-loop-role="row" class="food-quote-row" s="datac">
+                    <td s="tpl">
+                        <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
+                        <input type="hidden" class="sku-id" value="{%=this.skuId%}"/>
+                        <input type="hidden" class="food-id" value="{%=this.foodId%}"/>
+                        <!--<input type="hidden" class="sale" value="{%=this.sale%}"/>-->
+                    </td>
+                    <td>
+                        <input type="text" readonly class="form-control food-name" name="foodName"/>
+                    </td>
+                    <td class="text-right" s="tpl">
+                        <div class="input-group">
+                            <input type="number" class="form-control inputPrice"
+                                   name="inputPrice"
+                                   data-food-unit="{%=this.spec%}"
+                                   step="0.1"
+                                   data-per-increase="{%=this.foodPerIncrease%}"
+                                   style="width: 60px;" s-valid-error="require(),number()"
+                                   value="{%=this.inputPrice.toFixed(1)%}"/>
+                            <span class="input-group-addon">元/{%=this.spec%}</span>
+                        </div>
+                    </td>
+                    <td class="text-right" s="tpl">
+                        <div class="input-group">
+                            <input type="number" class="form-control num" name="num"
+                                   style="width: 60px;" s-valid-error="require(),number()"
+                                   value="{%=this.num%}"/>
+                            <!--<span class="input-group-addon">{%=this.stock%}</span>-->
+                        </div>
+                    </td>
+                    <td class="text-right">
+                        <a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
 
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">采购总数量：</label>
-        <div class="col-sm-10">
-            <input autocomplete="off" type="text" name="procurementNum" class="form-control" placeholder="采购总数量">
+
+            <!--            <label class="col-sm-2 control-label">商品种类数量：</label>-->
+            <!--            <div class="col-sm-10">-->
+            <!--                <input class="form-control goodsTypeNum"  rows="3" name="goodsTypeNum "/>-->
+            <!--           </div>-->
+
+            <!--            <label class="col-sm-2 control-label">采购总数量：</label>-->
+            <!--            <div class="col-sm-10">-->
+            <!--                <input class="form-control procurementNum"  rows="3" name="procurementNum "/>-->
+            <!--            </div>-->
+
+
+
+            <!--            <label class="col-sm-2 control-label">采购总金额：</label>-->
+            <!--            <div class="col-sm-10">-->
+            <!--                <input class="form-control procurementPrice"   rows="3" name="procurementPrice"/>-->
+            <!--            </div>-->
         </div>
-    </div>
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">采购总金额：</label>
-        <div class="col-sm-10">
-            <input autocomplete="off" type="text" name="procurementPrice" class="form-control" placeholder="采购总金额">
-        </div>
-    </div>
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">实收总数量：</label>
-        <div class="col-sm-10">
-            <input autocomplete="off" type="text" name="arrivalNum" class="form-control" placeholder="实收总数量">
-        </div>
-    </div>
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">实收总金额：</label>
-        <div class="col-sm-10">
-            <input autocomplete="off" type="text" name="arrivalPrice" class="form-control" placeholder="实收总金额">
-        </div>
-    </div>
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">物流单号：</label>
-        <div class="col-sm-10">
-            <input autocomplete="off" type="text" name="logisticsNo" class="form-control" placeholder="如yt:XXX,sf:XXX">
-        </div>
-    </div>
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">收货单号：</label>
-        <div class="col-sm-10">
-            <input autocomplete="off" type="text" name="receiptNo" class="form-control" placeholder="收货单号">
-        </div>
-    </div>
-</form>
+
+
+
+    </form>
+</div>
+
 <script type="text/javascript">
-    // S.on('s-ready', function(){
-    //     S.cascade($province, $city, $district);
-    // })
+
+    var currentStoreUser = null;
+    var currentStoreName = null;
+    var sale = false;
     S.meta.btns = [
         {
-            name: "保存",
+            name: "确定",
             style: "btn btn-primary",
-            click: function(){
-                return S.S("#storeUserForm").submit().done(function(rs){
-                    S.close(true);
-                });
+            click: function () {
+                S.alert($goods.data.data.foodName)
+                var deferred = $.Deferred()
+                $form.validate().done(function () {
+                    var list = []
+
+                    S.node.find('.food-quote-row').each(function () {
+                        var row = $(this)
+                        var foodId = row.find('.food-id').val()
+                        var skuId = row.find('.sku-id').val()
+                        var inputPriceNode = row.find('.inputPrice');
+                        var numNode = row.find('.num');
+                        var inputPrice = inputPriceNode.val()
+                        var num = numNode.val()
+                        var foodName = row.find('.food-name').val()
+
+                        var detail = {
+                            foodId: parseInt(foodId),
+                            skuId: parseInt(skuId),
+                            inputPrice: parseInt(inputPrice),
+                            num: parseInt(num),
+                            foodName:foodName
+                        }
+                        list.push(detail)
+                    })
+                    var tn = S.node.find('.goodsTypeNum');
+                    var sn = tn.val()
+                    console.log(tn.val())
+                    if (list.length == 0) {
+                        S.alert('请选择商品', 'warning')
+                        deferred.reject()
+                        return
+                    }
+                    var loadingDeferred = S.loading()
+                    var param = {};
+                    param.foodList = list
+                    param.storeUserId = [currentStoreUser.id]
+                    param.storeName=S.node.find('.storeName').val();
+                    // param.goodsTypeNum=S.node.find('.goodsTypeNum').val();
+                    // param.procurementNum=S.node.find('.procurementNum').val();
+                    // param.procurementPrice=S.node.find('.procurementPrice').val();
+                    S.post('/api/back/warehouse/createPurchaseOrder', {storeName:S.node.find('.storeName').val(),storeId:currentStoreUser.id,data: JSON.stringify(list)}).done(function (rs) {
+                        if (rs) {
+                            S.toast('创建成功', 'success')
+                            S.close(true)
+                        } else {
+                            deferred.reject()
+                        }
+                    }).fail(function () {
+                        deferred.reject()
+                    }).always(function () {
+                        loadingDeferred.resolve()
+                    })
+
+
+                }).fail(function () {
+                    deferred.reject()
+                })
+                return deferred
             }
         },
         {
             name: "关闭",
             style: "btn btn-default",
-            click: function(){
+            click: function () {
                 S.close();
             }
         }
     ]
+
+    function selectStoreUser() {
+        S.popupOpen('/storeUser/storeUserSelector.html', {multi: false}).done(function (storeUserList) {
+            if (storeUserList) {
+
+                currentStoreUser = storeUserList[0]
+                $storeUser.data(storeUserList[0])
+            }
+        })
+    }
+
+    selectStoreUser();
+
+
+    function selectFood() {
+        S.popupOpen('/test/foodSkuSelector.html', {
+            multi: true,
+            quotable: true,
+            excludeStoreUserId: currentStoreUser.id
+        }).done(function (foodList) {
+            console.log(foodList)
+            if (foodList) {
+                addFoodsToGrid(foodList)
+            }
+        })
+    }
+
+    function addFoodsToGrid(foodList) {
+        var list = []
+        foodList.forEach(function (f) {
+            list.push({
+                foodPicture: f.picture,
+                skuId: f.id,
+                foodId: f.foodId,
+                foodName: f.name,
+                spec: f.spec,
+                num: 0,
+                inputPrice: 0,
+            })
+        })
+        $foodList.addRows(list)
+    }
 </script>
