--- a/admin/src/main/resources/static/warehouse/purchase.html
+++ b/admin/src/main/resources/static/warehouse/purchase.html
@@ -52,8 +52,8 @@
                 <th>ID</th>
                 <th>订单编号</th>
                 <th>门店名称</th>
-                <th>供应商</th>
-                <th>采购计划单号</th>
+<!--                <th>供应商</th>-->
+<!--                <th>采购计划单号</th>-->
                 <th>商品种类数</th>
                 <th>采购总数量</th>
                 <th>采购总金额</th>
@@ -75,8 +75,8 @@
                 <td name="id"></td>
                 <td name="orderNo"></td>
                 <td name="store"></td>
-                <td name="supplier"></td>
-                <td name="procurementPlan"></td>
+<!--                <td name="supplier"></td>-->
+<!--                <td name="procurementPlan"></td>-->
                 <td name="procurementType"></td>
                 <td name="procurementNum"></td>
                 <td name="procurementPrice"></td>
