--- a/admin/src/main/resources/static/warehouse/purchase-add.html
+++ b/admin/src/main/resources/static/warehouse/purchase-add.html
@@ -7,6 +7,7 @@
                      s-click="selectStoreUser()" style="display: inline-block">
                     <a href="javascript:;" class="h3">{%=this.name || '选择门店'%} <i class="fa fa-plus"></i></a>
                     <input type="hidden" name="storeUserId" value="{%=this.id%}" s-valid-error="require()"/>
+                    <input type="hidden" class="storeName" name="storeName" value="{%=this.name%}" s-valid-error="require()"/>
                 </div>
             </div>
             <div class="pull-right">
@@ -14,77 +15,78 @@
                 <!--<input type="button" class="btn btn-primary btn-xs" s-click="selectStoreFood()" value="添加门店商品"/>-->
             </div>
         </div>
-    <div class="" id="foodQuoteSheetsGrid" s='check,datac,nda'
-         style="max-height: 500px; overflow: auto">
-        <table
-                class="table table-striped table-bordered form-inline table-hover">
-            <tr>
-                <th>图片</th>
-                <th>商品名</th>
-                <th class="text-right">进价</th>
-                <th class="text-right">进货数量</th>
-                <th class="text-right">操作</th>
-            </tr>
-            <tbody s="loop" id="foodList">
-            <tr s-loop-role="empty">
-                <td colspan="5" class="alert alert-warning">
-                    暂无商品
-                </td>
-            </tr>
-            <tr s-loop-role="row" class="food-quote-row" s="datac">
-                <td s="tpl">
-                    <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
-                    <input type="hidden" class="sku-id" value="{%=this.skuId%}"/>
-                    <input type="hidden" class="food-id" value="{%=this.foodId%}"/>
-                    <!--<input type="hidden" class="sale" value="{%=this.sale%}"/>-->
-                </td>
-                <td>
-                    <input type="text" readonly class="form-control food-name" name="foodName"/>
-                </td>
-                <td class="text-right" s="tpl">
-                    <div class="input-group">
-                        <input type="number" class="form-control inputPrice"
-                               name="inputPrice"
-                               data-food-unit="{%=this.spec%}"
-                               step="0.1"
-                               data-per-increase="{%=this.foodPerIncrease%}"
-                               style="width: 60px;" s-valid-error="require(),number()"
-                               value="{%=this.inputPrice.toFixed(1)%}"/>
-                        <span class="input-group-addon">元/{%=this.spec%}</span>
-                    </div>
-                </td>
-                <td class="text-right" s="tpl">
-                    <div class="input-group">
-                        <input type="number" class="form-control num" name="num"
-                               style="width: 60px;" s-valid-error="require(),number()"
-                               value="{%=this.num%}"/>
-                        <!--<span class="input-group-addon">{%=this.stock%}</span>-->
-                    </div>
-                </td>
-                <td class="text-right">
-                    <a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="" id="foodQuoteSheetsGrid" s='check,datac,nda'
+             style="max-height: 500px; overflow: auto">
+            <table
+                    class="table table-striped table-bordered form-inline table-hover">
+                <tr>
+                    <th>图片</th>
+                    <th>商品名</th>
+                    <th class="text-right">进价</th>
+                    <th class="text-right">进货数量</th>
+                    <th class="text-right">操作</th>
+                </tr>
+                <tbody s="loop" id="foodList">
+                <tr s-loop-role="empty">
+                    <td colspan="5" class="alert alert-warning">
+                        暂无商品
+                    </td>
+                </tr>
+                <tr s-loop-role="row" class="food-quote-row" s="datac">
+                    <td s="tpl">
+                        <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
+                        <input type="hidden" class="img" value="{%=this.foodPicture%}"/>
+                        <input type="hidden" class="sku-id" value="{%=this.skuId%}"/>
+                        <input type="hidden" class="food-id" value="{%=this.foodId%}"/>
+                        <!--<input type="hidden" class="sale" value="{%=this.sale%}"/>-->
+                    </td>
+                    <td>
+                        <input type="text" readonly class="form-control food-name" name="foodName"/>
+                    </td>
+                    <td class="text-right" s="tpl">
+                        <div class="input-group">
+                            <input type="number" class="form-control inputPrice"
+                                   name="inputPrice"
+                                   data-food-unit="{%=this.spec%}"
+                                   step="0.1"
+                                   data-per-increase="{%=this.foodPerIncrease%}"
+                                   style="width: 60px;" s-valid-error="require(),number()"
+                                   value="{%=this.inputPrice.toFixed(1)%}"/>
+                            <span class="input-group-addon">元/{%=this.spec%}</span>
+                        </div>
+                    </td>
+                    <td class="text-right" s="tpl">
+                        <div class="input-group">
+                            <input type="number" class="form-control num" name="num"
+                                   style="width: 60px;" s-valid-error="require(),number()"
+                                   value="{%=this.num%}"/>
+                            <!--<span class="input-group-addon">{%=this.stock%}</span>-->
+                        </div>
+                    </td>
+                    <td class="text-right">
+                        <a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
 
 
-            <label class="col-sm-2 control-label">商品种类数量：</label>
-            <div class="col-sm-10">
-                <input class="form-control"  rows="3" name="goodsTypeNum "/>
-           </div>
+<!--            <label class="col-sm-2 control-label">商品种类数量：</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input class="form-control goodsTypeNum"  rows="3" name="goodsTypeNum "/>-->
+<!--           </div>-->
 
-            <label class="col-sm-2 control-label">采购总数量：</label>
-            <div class="col-sm-10">
-                <input class="form-control"  rows="3" name="procurementNum "/>
-            </div>
+<!--            <label class="col-sm-2 control-label">采购总数量：</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input class="form-control procurementNum"  rows="3" name="procurementNum "/>-->
+<!--            </div>-->
 
 
 
-            <label class="col-sm-2 control-label">采购总金额：</label>
-            <div class="col-sm-10">
-                <input class="form-control"  rows="3" name="procurementPrice"/>
-            </div>
+<!--            <label class="col-sm-2 control-label">采购总金额：</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input class="form-control procurementPrice"   rows="3" name="procurementPrice"/>-->
+<!--            </div>-->
     </div>
 
 
@@ -93,20 +95,8 @@
 </div>
 <script type="text/javascript">
 
-
-    S.on('s-ready', function(){
-
-    })
-    function selectStoreUser() {
-        S.popupOpen('/storeUser/storeUserSelector.html', {multi: false}).done(function (storeUserList) {
-            if (storeUserList) {
-                $storeUserList.data(storeUserList[0])
-            }
-        })
-    }
-
-
     var currentStoreUser = null;
+    var currentStoreName = null;
     var sale = false;
     S.meta.btns = [
         {
@@ -116,6 +106,7 @@
                 var deferred = $.Deferred()
                 $form.validate().done(function () {
                     var list = []
+
                     S.node.find('.food-quote-row').each(function () {
                         var row = $(this)
                         var foodId = row.find('.food-id').val()
@@ -123,29 +114,36 @@
                         var inputPriceNode = row.find('.inputPrice');
                         var numNode = row.find('.num');
                         var inputPrice = inputPriceNode.val()
-
                         var num = numNode.val()
+                        var foodName = row.find('.food-name').val()
+                        var img = row.find('.img').val()
                         var detail = {
-                            foodId: foodId,
-                            skuId: skuId,
-                            inputPrice: inputPrice,
-                            num: num
+                            foodId: parseInt(foodId),
+                            skuId: parseInt(skuId),
+                            inputPrice: parseInt(inputPrice),
+                            num: parseInt(num),
+                            foodName:foodName,
+                            img:img
                         }
                         list.push(detail)
                     })
-                    console.log(list)
+                    var tn = S.node.find('.goodsTypeNum');
+                    var sn = tn.val()
+                    console.log(tn.val())
                     if (list.length == 0) {
                         S.alert('请选择商品', 'warning')
                         deferred.reject()
                         return
                     }
-                    S.$("")
                     var loadingDeferred = S.loading()
                     var param = {};
                     param.foodList = list
-                    param.store = [currentStoreUser.id]
-
-                    S.post('/api/test', {json: JSON.stringify(param)}).done(function (rs) {
+                    param.storeUserId = [currentStoreUser.id]
+                    param.storeName=S.node.find('.storeName').val();
+                    // param.goodsTypeNum=S.node.find('.goodsTypeNum').val();
+                    // param.procurementNum=S.node.find('.procurementNum').val();
+                    // param.procurementPrice=S.node.find('.procurementPrice').val();
+                    S.post('/api/back/warehouse/createPurchaseOrder', {storeName:S.node.find('.storeName').val(),storeId:currentStoreUser.id,data: JSON.stringify(list)}).done(function (rs) {
                         if (rs) {
                             S.toast('创建成功', 'success')
                             S.close(true)
@@ -177,6 +175,7 @@
     function selectStoreUser() {
         S.popupOpen('/storeUser/storeUserSelector.html', {multi: false}).done(function (storeUserList) {
             if (storeUserList) {
+
                 currentStoreUser = storeUserList[0]
                 $storeUser.data(storeUserList[0])
             }
