--- a/admin/src/main/resources/static/warehouse/purchase-edit.html
+++ b/admin/src/main/resources/static/warehouse/purchase-edit.html
@@ -1,22 +1,22 @@
-<meta title="编辑采购单" width="900px" args="storeData,goods:_model_,id" model="S.get('/api/back/warehouse/getEditPurchaseInfo/' + storeData.id)"/>
+<meta title="编辑采购单" width="900px" args="goods:_model_,storeData" model="S.get('/api/back/warehouse/getEditPurchaseInfo/' + storeData.id)"/>
 <div class="p">
-    <form id="form" s="valid,nda" s-data="goods">
+    <form id="form" s="valid,form,nda,datac">
         <div class="form-group" s-valid-role="item">
             <label class="col-sm-2 control-label">实收总数量：</label>
             <div class="col-sm-10">
-                <input autocomplete="off" type="text" s s-data-filter="goods.arrivalNum" name="goods.arrivalNum" class="form-control" placeholder="实收总数量">
+                <input  s s-data="goods.data.arrivalNum" type="text" s-data-filter="'goods.data.arrivalNum'" name="goods.data.arrivalNum" class="form-control">
             </div>
         </div>
         <div class="form-group" s-valid-role="item">
             <label class="col-sm-2 control-label">实收总金额：</label>
             <div class="col-sm-10">
-                <input autocomplete="off" type="text"    name="arrivalPrice" class="form-control" placeholder="实收总金额">
+                <input  s s-data="goods.data.arrivalPrice" type="text" s-data-filter="'goods.data.arrivalPrice'"     name="arrivalPrice" class="form-control" placeholder="实收总金额">
             </div>
         </div>
         <div class="form-group" s-valid-role="item">
             <label class="col-sm-2 control-label">物流单号：</label>
             <div class="col-sm-10">
-                <input autocomplete="off" type="text" name="logisticsNo" class="form-control" placeholder="如yt:XXX,sf:XXX">
+                <input s s-data="goods.data.logisticsNo" type="text" s-data-filter="'goods.data.logisticsNo'" type="text" name="logisticsNo" class="form-control" placeholder="如yt:XXX,sf:XXX">
             </div>
         </div>
         <div class="p-b clearfix">
@@ -46,15 +46,22 @@
                 </tr>
                 <tbody s="loop" id="foodList" s-data="goods.data.data">
                 <tr s-loop-role="row" class="food-quote-row" s="datac"  >
-                    <th class="text-right" s s-data-filter="goods.data.data.foodName"></th>
-                    <th class="text-right" s s-data-filter="num"></th>
+                    <td s="tpl" class="text-right">
+                        <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
+                    </td>
+                    <td class="text-right" s s-data-filter="'foodName'"></td>
+                    <td class="text-right" s s-data-filter="'inputPrice'"></td>
+                    <td class="text-right" s s-data-filter="'num'"></td>
+                    <td class="text-right">
+                        <a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
+                    </td>
                 </tr>
                 </tbody>
-<!--                <tr s-loop-role="empty">-->
-<!--                    <td colspan="5" class="alert alert-warning">-->
-<!--                        暂无商品-->
-<!--                    </td>-->
-<!--                </tr>-->
+                <tr s-loop-role="empty">
+                    <td colspan="5" class="alert alert-warning">
+                        暂无商品
+                    </td>
+                </tr>
                 <tr s-loop-role="row" class="food-quote-row" s="datac">
                     <td s="tpl">
                         <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
@@ -89,7 +96,6 @@
                         <a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
                     </td>
                 </tr>
-                </tbody>
             </table>
 
 
