--- a/admin/src/main/resources/static/test/caigou.html
+++ b/admin/src/main/resources/static/test/caigou.html
@@ -1,87 +1,87 @@
-<meta title="创建采购单" width="1000"/>
+<meta title="创建采购单" width="1000" args="food:_model_,id" model="S.get('/api/test/' + id)"/>
 <div class="p">
-    <form id="form" s="valid,nda">
-        <div class="p-b clearfix">
-            <div class="pull-left">
-                <div s-valid-role="item" id="storeUser" s="tpl" s-data="{}" s-valid-label="门店"
-                     s-click="selectStoreUser()" style="display: inline-block">
-                    <a href="javascript:;" class="h3">{%=this.name || '选择门店'%} <i class="fa fa-plus"></i></a>
-                    <input type="hidden" name="storeUserId" value="{%=this.id%}" s-valid-error="require()"/>
-                </div>
-            </div>
-            <div class="pull-right">
-                <input type="button" class="btn btn-success btn-xs" s-click="selectFood()" value="选择商品"/>
-                <!--<input type="button" class="btn btn-primary btn-xs" s-click="selectStoreFood()" value="添加门店商品"/>-->
-            </div>
+    <form s="valid,form,nda,datac"
+          s-data="food"
+          id="form" class="form-horizontal">
+        <label class="col-sm-2 control-label">商品种类数量：</label>
+        <input class="form-control goodsTypeNum" rows="3" name="data.goodsTypeNum "/>
+
+        <label class="col-sm-2 control-label">采购总数量：</label>
+        <div class="col-sm-10">
+            <input class="form-control" rows="3" name="procurementNum "/>
         </div>
+
+
+        <label class="col-sm-2 control-label">采购总金额：</label>
+        <div class="col-sm-10">
+            <input class="form-control" rows="3" name="procurementPrice"/>
+        </div>
+        <!--<div class="p-b clearfix">-->
+            <!--<div class="pull-left">-->
+                <!--<div s-valid-role="item" id="storeUser" s="tpl" s-data="{}" s-valid-label="门店"-->
+                     <!--s-click="selectStoreUser()" style="display: inline-block">-->
+                    <!--<a href="javascript:;" class="h3">{%=this.name || '选择门店'%} <i class="fa fa-plus"></i></a>-->
+                    <!--<input type="hidden" name="storeUserId" value="{%=this.id%}" s-valid-error="require()"/>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="pull-right">-->
+                <!--<input type="button" class="btn btn-success btn-xs" s-click="selectFood()" value="选择商品"/>-->
+                <!--&lt;!&ndash;<input type="button" class="btn btn-primary btn-xs" s-click="selectStoreFood()" value="添加门店商品"/>&ndash;&gt;-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="" id="foodQuoteSheetsGrid" s='check,datac,nda'
              style="max-height: 500px; overflow: auto">
-            <table
-                    class="table table-striped table-bordered form-inline table-hover">
-                <tr>
-                    <th>图片</th>
-                    <th>商品名</th>
-                    <th class="text-right">进价</th>
-                    <th class="text-right">进货数量</th>
-                    <th class="text-right">操作</th>
-                </tr>
-                <tbody s="loop" id="foodList">
-                <tr s-loop-role="empty">
-                    <td colspan="5" class="alert alert-warning">
-                        暂无商品
-                    </td>
-                </tr>
-                <tr s-loop-role="row" class="food-quote-row" s="datac">
-                    <td s="tpl">
-                        <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
-                        <input type="hidden" class="sku-id" value="{%=this.skuId%}"/>
-                        <input type="hidden" class="food-id" value="{%=this.foodId%}"/>
-                        <!--<input type="hidden" class="sale" value="{%=this.sale%}"/>-->
-                    </td>
-                    <td>
-                        <input type="text" readonly class="form-control food-name" name="foodName"/>
-                    </td>
-                    <td class="text-right" s="tpl">
-                        <div class="input-group">
-                            <input type="number" class="form-control inputPrice"
-                                   name="inputPrice"
-                                   data-food-unit="{%=this.spec%}"
-                                   step="0.1"
-                                   data-per-increase="{%=this.foodPerIncrease%}"
-                                   style="width: 60px;" s-valid-error="require(),number()"
-                                   value="{%=this.inputPrice.toFixed(1)%}"/>
-                            <span class="input-group-addon">元/{%=this.spec%}</span>
-                        </div>
-                    </td>
-                    <td class="text-right" s="tpl">
-                        <div class="input-group">
-                            <input type="number" class="form-control num" name="num"
-                                   style="width: 60px;" s-valid-error="require(),number()"
-                                   value="{%=this.num%}"/>
-                            <!--<span class="input-group-addon">{%=this.stock%}</span>-->
-                        </div>
-                    </td>
-                    <td class="text-right">
-                        <a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <label class="col-sm-2 control-label">商品种类数量：</label>
-            <div class="col-sm-10">
-                <input class="form-control goodsTypeNum" rows="3" name="goodsTypeNum "/>
-            </div>
-
-            <label class="col-sm-2 control-label">采购总数量：</label>
-            <div class="col-sm-10">
-                <input class="form-control" rows="3" name="procurementNum "/>
-            </div>
-
-
-            <label class="col-sm-2 control-label">采购总金额：</label>
-            <div class="col-sm-10">
-                <input class="form-control" rows="3" name="procurementPrice"/>
-            </div>
+            <!--<table-->
+                    <!--class="table table-striped table-bordered form-inline table-hover">-->
+                <!--<tr>-->
+                    <!--<th>图片</th>-->
+                    <!--<th>商品名</th>-->
+                    <!--<th class="text-right">进价</th>-->
+                    <!--<th class="text-right">进货数量</th>-->
+                    <!--<th class="text-right">操作</th>-->
+                <!--</tr>-->
+                <!--<tbody s="loop" id="foodList">-->
+                <!--<tr s-loop-role="empty">-->
+                    <!--<td colspan="5" class="alert alert-warning">-->
+                        <!--暂无商品-->
+                    <!--</td>-->
+                <!--</tr>-->
+                <!--<tr s-loop-role="row" class="food-quote-row" s="datac">-->
+                    <!--<td s="tpl">-->
+                        <!--<img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>-->
+                        <!--<input type="hidden" class="sku-id" value="{%=this.skuId%}"/>-->
+                        <!--<input type="hidden" class="food-id" value="{%=this.foodId%}"/>-->
+                        <!--&lt;!&ndash;<input type="hidden" class="sale" value="{%=this.sale%}"/>&ndash;&gt;-->
+                    <!--</td>-->
+                    <!--<td>-->
+                        <!--<input type="text" readonly class="form-control food-name" name="foodName"/>-->
+                    <!--</td>-->
+                    <!--<td class="text-right" s="tpl">-->
+                        <!--<div class="input-group">-->
+                            <!--<input type="number" class="form-control inputPrice"-->
+                                   <!--name="inputPrice"-->
+                                   <!--data-food-unit="{%=this.spec%}"-->
+                                   <!--step="0.1"-->
+                                   <!--data-per-increase="{%=this.foodPerIncrease%}"-->
+                                   <!--style="width: 60px;" s-valid-error="require(),number()"-->
+                                   <!--value="{%=this.inputPrice.toFixed(1)%}"/>-->
+                            <!--<span class="input-group-addon">元/{%=this.spec%}</span>-->
+                        <!--</div>-->
+                    <!--</td>-->
+                    <!--<td class="text-right" s="tpl">-->
+                        <!--<div class="input-group">-->
+                            <!--<input type="number" class="form-control num" name="num"-->
+                                   <!--style="width: 60px;" s-valid-error="require(),number()"-->
+                                   <!--value="{%=this.num%}"/>-->
+                            <!--&lt;!&ndash;<span class="input-group-addon">{%=this.stock%}</span>&ndash;&gt;-->
+                        <!--</div>-->
+                    <!--</td>-->
+                    <!--<td class="text-right">-->
+                        <!--<a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>-->
+                    <!--</td>-->
+                <!--</tr>-->
+                <!--</tbody>-->
+            <!--</table>-->
         </div>
     </form>
 </div>
