--- a/admin/src/main/resources/static/warehouse/receipt-list.html
+++ b/admin/src/main/resources/static/warehouse/receipt-list.html
@@ -49,8 +49,9 @@
                 <th>ID</th>
                 <th>收货单号</th>
                 <th>门店名称</th>
-                <th>商品总数种类</th>
-                <th>总商品金额</th>
+                <th>已到达商品总种数类</th>
+                <th>已到达商品总金额</th>
+                <th>状态</th>
                 <th>物流编号</th>
                 <th>采购订单编号</th>
                 <th>创建时间</th>
@@ -70,6 +71,7 @@
                 <td name="storeName"></td>
                 <td name="arrivaNum"></td>
                 <td name="arrivePrice"></td>
+                <td name="statusName"></td>
                 <td name="logisticsNo"></td>
                 <td name="orderNo"></td>
                 <td name="date"></td>
