--- a/admin/src/main/resources/static/warehouse/requireGoods-list.html
+++ b/admin/src/main/resources/static/warehouse/requireGoods-list.html
@@ -67,7 +67,7 @@
                 <td name="id"></td>
                 <td name="requireGoodsNo"></td>
                 <td name="storeName"></td>
-                <td name="status"></td>
+                <td name="statusName"></td>
                 <td name="requireGoodsNum"></td>
                 <td name="requireGoodsPrice"></td>
                 <td name="remark"></td>
