--- a/admin/src/main/resources/static/storeUserFood/storeUserFoodList.html
+++ b/admin/src/main/resources/static/storeUserFood/storeUserFoodList.html
@@ -223,12 +223,12 @@
                 <a href="javascript:;" class="btn btn-default btn-sm" s-click="return addToStore()"><i
                         class="fa fa-plus"></i>
                     添加到门店</a>
-                <a href="javascript:;" class="btn btn-default btn-sm" s-click="return cg()"><i
-                        class="fa fa-plus"></i>
-                    采购</a>
-                <a href="javascript:;" class="btn btn-default btn-sm" s-click="return batchAdd()"><i
-                        class="fa fa-plus"></i>
-                    批量添加</a>
+                <!--<a href="javascript:;" class="btn btn-default btn-sm" s-click="return cg()"><i-->
+                        <!--class="fa fa-plus"></i>-->
+                    <!--采购</a>-->
+                <!--<a href="javascript:;" class="btn btn-default btn-sm" s-click="return batchAdd()"><i-->
+                        <!--class="fa fa-plus"></i>-->
+                    <!--批量添加</a>-->
                 <a href="javascript:;" class="btn btn-default btn-sm" s-click="return batchCheckPlatFood()"><i
                         class="fa fa-plus"></i>
                     核对平台商品状态</a>
