仓管后台页面接口

--- a/admin/src/main/resources/static/warehouse/purchase-add.html
+++ b/admin/src/main/resources/static/warehouse/purchase-add.html
@@ -120,7 +120,7 @@
                         var detail = {
                             foodId: parseInt(foodId),
                             skuId: parseInt(skuId),
-                            inputPrice: parseInt(inputPrice),
+                            inputPrice: parseFloat(inputPrice),
                             num: parseInt(num),
                             foodName:foodName,
                             img:img
