--- a/admin/src/main/resources/static/warehouse/purchase-edit.html
+++ b/admin/src/main/resources/static/warehouse/purchase-edit.html
@@ -74,13 +74,13 @@
             <div class="form-group" s-valid-role="item">
                 <label class="col-sm-2 control-label">实收总数量：</label>
                 <div class="col-sm-10">
-                    <input  s s-data="goods.data.arrivalNum" type="text" s-data-filter="'goods.data.arrivalNum'" name="goods.data.arrivalNum" class="form-control arrivalNum">
+                    <input  s s-data="goods.data.arrivalNum" value="" type="text" s-data-filter="'goods.data.arrivalNum'" name="goods.data.arrivalNum" class="form-control arrivalNum">
                 </div>
             </div>
             <div class="form-group" s-valid-role="item">
                 <label class="col-sm-2 control-label">实收总金额：</label>
                 <div class="col-sm-10">
-                    <input  s s-data="goods.data.arrivalPrice" type="text" s-data-filter="'goods.data.arrivalPrice'"     name="arrivalPrice" class="form-control arrivalPrice" placeholder="实收总金额">
+                    <input  s s-data="goods.data.arrivalPrice" value="" type="text" s-data-filter="'goods.data.arrivalPrice'"     name="arrivalPrice" class="form-control arrivalPrice" placeholder="实收总金额">
                 </div>
             </div>
             <div class="form-group" s-valid-role="item">
@@ -130,7 +130,7 @@
                         var row = $(this)
                         var foodId = row.find('.food-id').val()
                         var skuId = row.find('.sku-id').val()
-                        var inputPriceNode = row.find('.inputPrice');
+                        var inputPriceNode = row.find('.inputPrice')
                         var numNode = row.find('.num');
                         var inputPrice = inputPriceNode.val()
                         var num = numNode.val()
@@ -158,14 +158,21 @@
                     var param = {};
                     param.foodList = list
                     param.storeUserId = [storeData.storeId]
-
+                    var arrivalNum=parseInt(S.node.find('.arrivalNum').val());
+                    if (isNaN(arrivalNum)){
+                        arrivalNum=0
+                    }
+                    var arrivalPrice=parseFloat(S.node.find('.arrivalPrice').val());
+                    if (isNaN(arrivalPrice)){
+                        arrivalPrice=0
+                    }
                     // param.storeName=S.node.find('.storeName').val();
                     // param.logisticsNo =S.node.find('.logisticsNo ').val();
                     // param.arrivalPrice =S.node.find('.arrivalPrice ').val();
                     // param.arrivalNum=S.node.find('.arrivalNum').val();
                     S.post('/api/back/warehouse/updatePurchase', {id:storeData.id,
-                                                                    arrivalNum:parseInt(S.node.find('.arrivalNum').val()),
-                                                                    arrivalPrice:parseFloat(S.node.find('.arrivalPrice').val()),
+                                                                     arrivalNum:arrivalNum,
+                                                                     arrivalPrice:arrivalPrice,
                                                                     logisticsNo:S.node.find('.logisticsNo').val(),
                                                                     storeName:S.node.find('.storeName').val(),
                                                                     storeId:storeData.storeId,
