--- a/admin/src/main/resources/static/warehouse/requireGoods-detail.html
+++ b/admin/src/main/resources/static/warehouse/requireGoods-detail.html
@@ -28,6 +28,7 @@
             <tr>
                 <th>ID</th>
                 <th>商品名称</th>
+                <th>商品图片</th>
                 <th>商品数量</th>
                 <th>商品单价</th>
                 <th>创建时间</th>
@@ -44,6 +45,7 @@
             <tr s-loop-role="row" s="datac,row" s-check-role="i">
                 <td name="id"></td>
                 <td name="foodName"></td>
+                <td s="tpl"><img src="{%=this.img%}" style="max-width: 40px; max-height: 40px;"/></td>
                 <td name="foodNum"></td>
                 <td name="foodPrice"></td>
                 <td name="date"></td>
