发布商品相关

--- a/admin/src/main/resources/static/food/food-edit.html
+++ b/admin/src/main/resources/static/food/food-edit.html
@@ -91,7 +91,7 @@
 						   name="meituanTagId" data-toggle="dropdown"/>
 					<input type="text" readonly s-click="selectMeituanTag()" class="form-control dropdown-toggle"
 						   placeholder="美团类目" id="meituanTagName"
-						   name="meituanTagName" data-toggle="dropdown"/>
+						   name="meituanTagName" s-valid-error="require()" data-toggle="dropdown"/>
 				</td>
 			</tr>
 			<tr>
