--- a/admin/src/main/resources/static/storeUserFood/storeUserFoodList.html
+++ b/admin/src/main/resources/static/storeUserFood/storeUserFoodList.html
@@ -236,8 +236,8 @@
                     批量改报价</a>
                 <a href="javascript:;" class="btn btn-default btn-sm" s-click="return batchChangePriceIncrease()">
                     批量改百分比</a>
-                <a href="javascript:;" class="btn btn-default btn-sm" s-click="return copy()"><i class="fa fa-copy"></i>
-                    复制</a>
+                <!--<a href="javascript:;" class="btn btn-default btn-sm" s-click="return copy()"><i class="fa fa-copy"></i>-->
+                    <!--复制</a>-->
                 <span class="p-l-sm p-r-sm"> | </span>
                 <a href="javascript:;" class="btn btn-default btn-sm" s-click="return setquoteIncrease()"> 报价加价</a>
                 <a href="javascript:;" class="btn btn-default btn-sm" s-click="return setPriceIncrease()"> 设置加价</a>
